--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -84,7 +84,7 @@
   }
 
   &__list {
-    gap: rem(24);
+    gap: fluid(24, 0);
 
     @include laptop-s {
       gap: rem(0);
@@ -104,6 +104,8 @@
   }
 
   &__link {
+    @include fluid-text(18, 10);
+
     padding: rem(10);
     line-height: 1;
 
